# tvccointreg

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.html
examples/: consumption_multivariate.py  quickstart.py  real_data_consumption.py  spurious_vs_real.py
tests/: test_cointegration.py  test_decomposition.py  test_estimation.py
tvccointreg/: __init__.py  cointegration.py  colormaps.py  core.py  datasets.py  drivers.py  estimation.py  plotting.py  tables.py
