[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tvccointreg"
version = "0.1.1"
description = "Time-Varying Coefficient regression and Generalized Cointegration (Hall, Swamy & Tavlas)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Dr Merwan Roudane", email = "merwanroudane920@gmail.com" },
]
maintainers = [
    { name = "Dr Merwan Roudane", email = "merwanroudane920@gmail.com" },
]
keywords = [
    "econometrics",
    "cointegration",
    "generalized-cointegration",
    "time-varying-coefficient",
    "random-coefficient-model",
    "nonstationary",
    "Swamy",
    "coefficient-drivers",
    "nonlinear-cointegration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
adf = ["statsmodels>=0.13"]
dev = [
    "pytest>=7.0",
    "statsmodels>=0.13",
    "build",
]

[project.urls]
Homepage = "https://github.com/merwanroudane/tvccointreg"
Repository = "https://github.com/merwanroudane/tvccointreg"
Issues = "https://github.com/merwanroudane/tvccointreg/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tvccointreg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
